first version of homepage with only the view+ updated style.css

--- a/client-jss/src/app/main/components/header/header.component.css
+++ b/client-jss/src/app/main/components/header/header.component.css
@@ -22,3 +22,7 @@
     border-left: 1px solid var(--ar-primary);
     border-right: 1px solid var(--ar-primary);
 }
+
+.nav-item-podcast {
+    padding-top: 0.8rem;
+}
