--- a/client-jss/src/app/main/components/generic-hub/generic-hub.component.html
+++ b/client-jss/src/app/main/components/generic-hub/generic-hub.component.html
@@ -1,10 +1,8 @@
 <ng-container *ngIf="selectedEntityType">
   <div class="w-100 justify-content-between my-3">
-
-
     <div class="container pt-5">
       <div class="row">
-        <div class="col-md-8">
+        <div class="col-8">
           <div class="input-group custom-input-group align-items-center py-0 rounded-1 row mb-3">
             <div class="col">
               <div class="row align-items-center">
@@ -18,6 +16,7 @@
               </div>
             </div>
           </div>
+
           <div class="row p-0">
             <div *ngIf="!postsByEntityType || postsByEntityType.length == 0" class="pb-3">
               <div class="panel-loader">
@@ -28,8 +27,9 @@
                 <div class="skeleton skeleton-block"></div>
               </div>
             </div>
+
             <div *ngIf="postsByEntityType && postsByEntityType.length>0 && !searchText" class="row p-0">
-              <div *ngFor="let post of postsByEntityType | slice:0:2" class="col-12 col-md-4 mb-2">
+              <div *ngFor="let post of postsByEntityType.slice(0,6)" class="col-6 mb-4">
                 <article class="border-0 card h-100">
                   <div class="card-img px-2">
                     <div class="image-frame image-hover-style-1">
@@ -50,8 +50,6 @@
                           class="pe-0" src="/assets/images/premium-icon.svg">
                         {{post.titleText}}</a>
                     </h4>
-                    <p class="card-text-truncate mb-0" [innerHTML]="post.excerptText | trustHtml">
-                    </p>
                   </div>
                   <div class="row align-items-center px-2">
                     <div class="col-lg-6">
@@ -71,8 +69,51 @@
                     </div>
                   </div>
                 </article>
+                <hr>
+              </div>
+
+              <div *ngFor="let post of postsByEntityType.slice(6)" class="col-12 mb-2">
+                <article class="blog-style2 card mb-4">
+                  <div class="feature-image">
+                    <div class="image-frame image-hover-style-1">
+                      <a (click)="openPost(post, $event)"> <img *ngIf="post.media" class="lazyload"
+                          [src]="post.media.urlMediumLarge!=null ? post.media.urlMediumLarge : post.media.urlFull"
+                          [alt]="post.media.alt_text" class="w-100"></a>
+                    </div>
+                  </div>
+                  <div class="card-body  d-md-flex align-items-center">
+                    <div class="card-flex-content">
+                      <a (click)="openCategoryPosts(post.jssCategories[0], $event)"
+                        class="badge bg-info rounded-pill px-1 col-auto me-2">{{post.jssCategories[0].name}}</a>
+                      <h4>
+                        <a class="card-text-truncate" (click)="openPost(post, $event)"> <img *ngIf="post.isPremium"
+                            class="pe-0" src="/assets/images/premium-icon.svg">
+                          {{post.titleText}}</a>
+                      </h4>
+                      <div class="row">
+                        <div class="col-lg-6">
+                          <div class="author-block">
+                            <ul class="avatar list-inline mb-0">
+                              <li class="list-inline-item"><a class="fs-9"
+                                  (click)="openAuthorPosts(post.fullAuthor, $event)"><img
+                                    [src]="post.fullAuthor.avatar_url_size_24" [alt]="post.fullAuthor.name"
+                                    data-bs-toggle="tooltip" data-bs-placement="top" [title]="post.fullAuthor.name">
+                                  {{post.fullAuthor.name}}</a></li>
+                            </ul>
+                          </div>
+                        </div>
+                        <div class="col-lg-6"> <span class="date-info fs-9 float-lg-end">
+                            <span>Publié le {{post.date | date:'EEEE d MMMM'}}</span>
+                          </span>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </article>
+                <hr>
               </div>
             </div>
+
             <div *ngIf="searchResults && searchResults.length>0 && searchText && searchText.length>2" class="row p-0">
               <div *ngFor="let post of searchResults | slice:0:2" class="col-12 col-md-4 mb-2">
                 <article class="border-0 card h-100">
@@ -95,8 +136,6 @@
                           class="pe-0" src="/assets/images/premium-icon.svg">
                         {{post.titleText}}</a>
                     </h4>
-                    <p class="card-text-truncate mb-0" [innerHTML]="post.excerptText | trustHtml">
-                    </p>
                   </div>
                   <div class="row align-items-center px-2">
                     <div class="col-lg-6">
@@ -127,7 +166,7 @@
               <div class="row">
                 <div class="col-12">
                   <div class="section-title-block d-flex pb-3">
-                    <h3 class="section-widget-title">Tag liés</h3>
+                    <h3 class="section-widget-title">Tags liés</h3>
 
                   </div>
                 </div>
