correction on pagination design

--- a/client-jss/src/app/main/components/generic-hub/generic-hub.component.html
+++ b/client-jss/src/app/main/components/generic-hub/generic-hub.component.html
@@ -64,7 +64,7 @@
                       </div>
                     </div>
                     <div class="col-lg-6"> <span class="date-info fs-9 float-lg-end">
-                        <span>Publié le {{post.date | date:'EEEE d MMMM'}}</span>
+                        <span>Publié le {{post.date | date:'EEEE d MMMM'}} à {{post.date | date:'HH:mm'}}</span>
                       </span>
                     </div>
                   </div>
@@ -103,7 +103,7 @@
                           </div>
                         </div>
                         <div class="col-lg-6"> <span class="date-info fs-9 float-lg-end">
-                            <span>Publié le {{post.date | date:'EEEE d MMMM'}}</span>
+                            <span>Publié le {{post.date | date:'EEEE d MMMM'}} à {{post.date | date:'HH:mm'}}</span>
                           </span>
                         </div>
                       </div>
@@ -150,7 +150,7 @@
                       </div>
                     </div>
                     <div class="col-lg-6"> <span class="date-info fs-9 float-lg-end">
-                        <span>Publié le {{post.date | date:'EEEE d MMMM'}}</span>
+                        <span>Publié le {{post.date | date:'EEEE d MMMM'}} à {{post.date | date:'HH:mm'}}</span>
                       </span>
                     </div>
                   </div>
