--- a/client-jss/src/app/main/components/generic-hub/generic-hub.component.css
+++ b/client-jss/src/app/main/components/generic-hub/generic-hub.component.css
@@ -26,3 +26,26 @@
   color: var(--bs-gray);
   cursor: not-allowed;
 }
+
+.btn-clear-search {
+  position: absolute;
+  top: 50%;
+  right: 3rem;
+  transform: translateY(-50%);
+  background: transparent;
+  border: none;
+  color: #999;
+  padding: 0;
+  margin: 0;
+  z-index: 3;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  width: 1.5rem;
+  height: 1.5rem;
+  font-size: 1rem;
+  line-height: 1;
+  cursor: pointer;
+}
