finished fixing view of homepage

--- a/client-jss/src/app/main/components/header/header.component.html
+++ b/client-jss/src/app/main/components/header/header.component.html
@@ -14,12 +14,12 @@
           <ul class="list-inline mb-0 d-flex gap-1">
             <li class="list-inline-item">
               <a class="social-icon rounded-circle d-flex align-items-center justify-content-center" href="#">
-                <i class="bi-facebook"></i>
+                <i class="bi-linkedin"></i>
               </a>
             </li>
             <li class="list-inline-item">
               <a class="social-icon rounded-circle d-flex align-items-center justify-content-center" href="#">
-                <i class="fab fa-twitter"></i>
+                <i class="bi-facebook"></i>
               </a>
             </li>
             <li class="list-inline-item">
