--- a/client-jss/src/app/main/components/main/main.component.css
+++ b/client-jss/src/app/main/components/main/main.component.css
@@ -18,3 +18,12 @@
 .titleMostSeen {
     color: var(--ar-primary);
 }
+
+.fixed-size-img-posts .card-img img {
+    height: 320px;
+    width: 100%;
+    object-fit: cover;
+    object-position: center;
+    display: block;
+    border-radius: inherit;
+}
