--- a/client-jss/src/assets/css/style.css
+++ b/client-jss/src/assets/css/style.css
@@ -12391,10 +12391,7 @@ blockquote p {
 
 .feature-image:before {
   content: "";
-  display: block;
-  width: 100%;
-  z-index: 1;
-  padding-bottom: 80%;
+  padding-bottom: 100%;
 }
 
 .feature-image .image-frame {
@@ -12572,16 +12569,16 @@ blockquote p {
   padding-bottom: 15px;
 }
 
+.blog-style3 .feature-image {
+  max-height: 400px;
+}
+
 .blog-style3 .feature-image img {
   border-radius: 8px;
 }
 
 .blog-style3 .card-body {
-  background: linear-gradient(0deg, rgba(0, 0, 0, 0.8) 0%, rgba(0, 0, 0, 0.3) 60%, rgba(0, 0, 0, 0) 100%);
   border-radius: 8px;
-  position: absolute;
-  z-index: 2;
-  bottom: 0;
   width: 100%;
 }
 
@@ -12591,19 +12588,19 @@ blockquote p {
 }
 
 .blog-style3 .card-body h2 a, .blog-style3 .card-body .h2 a, .blog-style3 .card-body h3 a, .blog-style3 .card-body .h3 a, .blog-style3 .card-body h4 a, .blog-style3 .card-body .h4 a, .blog-style3 .card-body h5 a, .blog-style3 .card-body .h5 a, .blog-style3 .card-body h6 a, .blog-style3 .card-body .h6 a {
-  color: #fff;
+  color: var(--ar-primary);
 }
 
 .blog-style3 .card-body p {
-  color: #fff;
+  color: var(--ar-primary);
 }
 
 .blog-style3 .author-block li a {
-  color: #fff;
+  color: var(--ar-primary);
 }
 
 .blog-style3 .date-info span {
-  color: #fff;
+  color: var(--ar-primary);
 }
 
 .blog-style4 .blog-post-image img {
@@ -13357,6 +13354,7 @@ ul.entry-comment .comment-content ul, ul.entry-comment .comment-content ol {
 
   .blog-style2 {
     display: block;
+    max-height: 25px;
   }
 
   .blog-style2 .feature-image {
@@ -13438,13 +13436,24 @@ ul.entry-comment .comment-content ul, ul.entry-comment .comment-content ol {
 ============================================== */
 
 
-.card-truncate-1-line {
+.card-truncate-1-line, .card-truncate-1-line p {
   display: -webkit-box;
   -webkit-line-clamp: 1;
   -webkit-box-orient: vertical;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: normal;
+  padding-bottom: 0px !important;
+}
+
+.card-truncate-6-line, .card-truncate-6-line p {
+  display: -webkit-box;
+  -webkit-line-clamp: 5;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: normal;
+  padding-bottom: 0px !important;
 }
 
 .card-title-truncate {
@@ -13501,4 +13510,28 @@ ul.entry-comment .comment-content ul, ul.entry-comment .comment-content ol {
   100% {
     background-position: 200% 0;
   }
+}
+
+.rounded-outline-icon {
+  width: 30px;
+  height: 30px;
+  background-color: transparent;
+  border: 1px solid black;
+  color: black;
+  transition: background-color 0.3s, color 0.3s;
+
+
+  &:hover {
+    background-color: var(--bs-gray-300);
+    color: #0F1E2E;
+  }
+}
+
+.btn-circle {
+  width: 32px;
+  height: 32px;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
