--- a/client-jss/src/app/main/components/main/main.component.html
+++ b/client-jss/src/app/main/components/main/main.component.html
@@ -216,7 +216,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <article *ngFor="let post of ileDeFrancePosts | slice:0:8"
+                            <article *ngFor="let post of ileDeFrancePosts"
                                 class=" blog-style5 d-flex d-md-block d-xl-flex align-items-center mb-3">
                                 <a (click)="openPost(post, $event)">
                                     <div class="post-img-wrap position-relative overflow-hidden">
